refactor,feat: refactor setup and environment, add smtp package, implement invite endpoint
